GH-1974 Formatter rework and general code cleanup (#1974)
* Start formatter migration, fixes and code cleanup

* Add simplified formatter creation

* Further code cleanup

* Correct CheckStyle

* More cleanup

* Still cleaning up

* More cleaning up

* Almost cleaned up...

* Finish cleaning up

* Correct CheckStyle issue

* Don't store strong Player reference

* Correct user online status detection

* Improve usage of BukkitUserProfile

* Don't try refreshing Player reference with OfflinePlayer one

* Correct nullable weak references

* Correct code style in accordance with review comments, replace all possible Apache Commons Lang occurrences, correct toLowerCase() and toUpperCase() usages by using ROOT Locale

* Correct main class code style

* Correct database serialization error

* Add diacritics to all configuration comments

* Correct comment mistake

* Correct code style in accordance with review comments

* Correct failing test

* Correct code in accordance with review comments

* More PandaStream#mapOpt and StringUtils#isEmpty