@@ -12,16 +12,19 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 import net.dzikoysk.funnyguilds.FunnyGuilds;
 import net.dzikoysk.funnyguilds.concurrency.util.DefaultConcurrencyRequest;
+import net.dzikoysk.funnyguilds.config.MessageConfiguration;
 import net.dzikoysk.funnyguilds.config.PluginConfiguration;
+import net.dzikoysk.funnyguilds.shared.FunnyFormatter;
+import net.dzikoysk.funnyguilds.shared.bukkit.ChatUtils;
 import net.dzikoysk.funnyguilds.telemetry.FunnyTelemetry;
 import net.dzikoysk.funnyguilds.telemetry.FunnybinResponse;
 import net.dzikoysk.funnyguilds.telemetry.PasteType;
-import org.bukkit.ChatColor;
 import org.bukkit.command.CommandSender;
+import org.jetbrains.annotations.Nullable;
+import panda.std.Option;
+import panda.std.stream.PandaStream;
 
 public final class FunnybinRequest extends DefaultConcurrencyRequest {
 
@@ -35,15 +38,21 @@ public final class FunnybinRequest extends DefaultConcurrencyRequest {
 
     @Override
     public void execute() throws Exception {
+        MessageConfiguration messages = FunnyGuilds.getInstance().getMessageConfiguration();
         List<FunnybinResponse> sentPastes = new ArrayList<>();
 
-        for (int i = 0; i < files.size(); i++) {
-            String fileName = files.get(i);
+        for (int i = 0; i < this.files.size(); i++) {
+            String fileName = this.files.get(i);
             File file;
             String content = null;
             PasteType type = PasteType.OTHER;
 
-            sender.sendMessage(ChatColor.GREEN + "Wysylam plik: " + ChatColor.AQUA + (i + 1) + ChatColor.GREEN + "/" + ChatColor.AQUA + files.size() + ChatColor.GREEN + "...");
+            FunnyFormatter formatter = new FunnyFormatter()
+                    .register("{NUM}", i + 1)
+                    .register("{TOTAL}", this.files.size())
+                    .register("{FILE}", fileName);
+
+            ChatUtils.sendMessage(this.sender, formatter.format(messages.funnybinSendingFile));
 
             if ("log".equals(fileName)) {
                 file = new File("logs/latest.log");
@@ -70,16 +79,16 @@ public final class FunnybinRequest extends DefaultConcurrencyRequest {
                 file = new File(fileName);
             }
 
-            if (content == null) {
+            if (content == null && file != null) {
                 try {
                     content = Files.asCharSource(file, StandardCharsets.UTF_8).read();
                 }
                 catch (FileNotFoundException e) {
-                    sender.sendMessage(ChatColor.RED + "Podany plik: " + fileName + " nie istnieje");
+                    ChatUtils.sendMessage(this.sender, formatter.format(messages.funnybinFileNotFound));
                     continue;
                 }
                 catch (IOException e) {
-                    sender.sendMessage(ChatColor.RED + "Podany plik: " + fileName + " nie mogl być otworzony (szczegoly w konsoli)");
+                    ChatUtils.sendMessage(this.sender, formatter.format(messages.funnybinFileNotOpened));
                     FunnyGuilds.getPluginLogger().error("Failed to open a file: " + fileName, e);
                     continue;
                 }
@@ -88,29 +97,41 @@ public final class FunnybinRequest extends DefaultConcurrencyRequest {
             try {
                 sentPastes.add(FunnyTelemetry.postToFunnybin(content, type, fileName));
             }
-            catch (IOException e) {
-                sender.sendMessage(ChatColor.RED + "Podany plik: " + fileName + " nie mogl byc wyslany (szczegoly w konsoli)");
-                FunnyGuilds.getPluginLogger().error("Failed to submit a paste: " + fileName, e);
+            catch (IOException exception) {
+                ChatUtils.sendMessage(this.sender, formatter.format(messages.funnybinFileNotSent));
+                FunnyGuilds.getPluginLogger().error("Failed to submit a paste: " + fileName, exception);
             }
         }
 
         if (sentPastes.size() == 1) {
-            sender.sendMessage(ChatColor.GREEN + "Plik wyslany. Link: " + ChatColor.AQUA + sentPastes.get(0).getShortUrl());
+            String message = FunnyFormatter.format(messages.funnybinFileSent, "{LINK}", sentPastes.get(0).getShortUrl());
+            ChatUtils.sendMessage(this.sender, message);
             return;
         }
 
-        sender.sendMessage(ChatColor.GREEN + "Tworze paczke z wyslanych plikow...");
+        ChatUtils.sendMessage(this.sender, messages.funnybinBuildingBundle);
 
         try {
-            FunnybinResponse response = FunnyTelemetry.createBundle(sentPastes.stream().map(FunnybinResponse::getUuid).collect(Collectors.toList()));
-            sender.sendMessage(ChatColor.GREEN + "Paczka wyslana. Link: " + ChatColor.AQUA + response.getShortUrl());
+            Option<FunnybinResponse> response = FunnyTelemetry.createBundle(
+                    PandaStream.of(sentPastes)
+                            .map(FunnybinResponse::getUuid)
+                            .toList()
+            );
+
+            if (response.isEmpty()) {
+                throw new IOException("Response for FunnyTelemetry bundle is null");
+            }
+
+            String message = FunnyFormatter.format(messages.funnybinBundleSent, "{LINK}", response.get().getShortUrl());
+            ChatUtils.sendMessage(this.sender, message);
         }
-        catch (IOException e) {
-            sender.sendMessage(ChatColor.RED + "Wystapil blad podczas tworzenia paczki. ");
-            FunnyGuilds.getPluginLogger().error("Failed to submit a bundle. Files: " + files, e);
+        catch (IOException exception) {
+            ChatUtils.sendMessage(this.sender, messages.funnybinBundleNotBuilt);
+            FunnyGuilds.getPluginLogger().error("Failed to submit a bundle. Files: " + this.files, exception);
         }
     }
 
+    @Nullable
     private static FunnybinRequest ofData(CommandSender sender, String[] args) {
         if (args.length == 1) {
             return new FunnybinRequest(sender, Arrays.asList("config", "log"));
@@ -126,21 +147,24 @@ public final class FunnybinRequest extends DefaultConcurrencyRequest {
                     if (args.length >= 3) {
                         new FunnybinRequest(sender, Collections.singletonList(args[2]));
                     }
+
                     break;
                 case "bundle":
                     if (args.length >= 3) {
                         return new FunnybinRequest(sender, Arrays.asList(args).subList(2, args.length));
                     }
+
                     break;
-                default: return null;
+                default:
+                    return null;
             }
         }
 
         return null;
     }
 
-    public static Optional<FunnybinRequest> of(CommandSender sender, String[] args) {
-        return Optional.ofNullable(ofData(sender, args));
+    public static Option<FunnybinRequest> of(CommandSender sender, String[] args) {
+        return Option.of(ofData(sender, args));
     }
 
 }
